# planarwm

./: Cargo.toml  README.md
example/: planarwm.conf  planarwm.desktop
src/: actions.rs  config.rs  ipc.rs  main.rs  process.rs  protocol.rs  requests.rs
src/wm/: background.rs  desktop.rs  dispatch.rs  libinputdevice.rs  lifecycle.rs  mod.rs  output.rs  seat.rs  slide.rs  task.rs  utils.rs  window.rs  workspace.rs
