# SPDX-FileCopyrightText: © 2026 Julian Andrews
# SPDX-License-Identifier: 0BSD

[package]
name = "planarwm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
hocon-rs = "0.1.3"
serde = {version = "1.0.228", features = ["derive"]}
wayland-backend = "0.3.14"
wayland-client = "0.31.13"
wayland-scanner = "0.31.9"
xkbcommon = "0.9.0"
