# SPDX-FileCopyrightText: © 2026 FridayFaerie
# SPDX-License-Identifier: 0BSD

[package]
name = "planarwm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
hocon-rs = "0.1.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1"
wayland-backend = "0.3.14"
wayland-client = "0.31.13"
wayland-scanner = "0.31.9"
xkbcommon = "0.9.0"
nix = { version = "0.31", features = ["poll","event"]}
memmap2 = "0.9"
rustix = {version = "1.1", features = ["fs"]}
